# Swift-app

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/swift_final/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/swift_final/: ApplicationLoader.kt  MainActivity.kt  Screens.kt
app/src/main/java/com/example/swift_final/lib/: Authentication.java  Authorisation.java  DownloadCallback.java  DownloadInfo.java  Downloader.java  FileCategory.java  FileType.java  InternalPointerMarker.java  JNIReachabilityFence.java  Logger.java  RequestInfo.java  ResponseErrors.java  Start.java  TypeOfFile.java
app/src/main/java/com/example/swift_final/ui/: constants.kt
app/src/main/java/com/example/swift_final/ui/finished_downloads/: FinishPage.kt
app/src/main/java/com/example/swift_final/util/: AndriodUtil.kt  WebUtils.kt  kotlinUtil.kt  screen_util.kt
app/src/main/res/drawable/: ic_3gp.xml  ic_add.xml  ic_add_button.xml  ic_app.xml  ic_application.xml  ic_audio.xml  ic_baseline_error_outline_24.xml  ic_document.xml  ic_download_bdark.xml  ic_download_bordered.xml  ic_dowunfin.xml  ic_excel.xml  ic_flv.xml  ic_folders.xml  ic_gif.xml  ic_html.xml  ic_image.xml  ic_iso.xml  ic_jpg.xml  ic_mkv.xml  ic_mp3.xml  ic_mp4.xml  ic_ok.xml  ic_other.xml  ic_pdf.xml  ic_photo.xml  ic_png.xml  ic_powerpoint.xml  ic_sad.xml  ic_share.xml  ic_un_download.xml  ic_video.xml  ic_video_player.xml  ic_word.xml  ic_zip.xml  ic_zip_c.xml
app/src/main/res/drawable-night/: ic_download_bordered.xml  ic_folders.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/swift_final/: ExampleUnitTest.kt
downloader_lib/: Cargo.toml  build.rs
downloader_lib/.cargo/: config.toml
downloader_lib/src/: download_callback.rs  download_info.rs  errors.rs  filetypes.rs  java_glue.in  java_glue.rs.in  lib.rs  logger.rs  macros.rs
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
