[package]
name = "downloader_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "downloader_lib"
crate-type = ["cdylib"]


[dependencies]
rifgen = "*"
jni-sys = "*"
log = "*"
log-panics="*"
android_logger = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
derive-new = "*"
reqwest = {version = "*", features = ["blocking"] }
openssl = { version = "*", features = ["vendored"] }
percent-encoding = "*"
mime = '*'
casey = "0.3.0"

[build-dependencies]
rifgen = "*"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs", rev = "fa3cd2c4d411f7e1eab7e0c17357a1d8a918c9b2" }