[package]
name = "downloader_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "downloader_lib"
crate-type = ["cdylib"]


[dependencies]
rifgen = "0.1.61"
jni-sys = "0.4.0"
log = "*"
log-panics="*"
android_logger = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
derive-new = "0.7.0"
reqwest = {version = "*", features = ["blocking"] }
openssl = { version = "*", features = ["vendored"] }
percent-encoding = "*"
mime = '*'
casey = "*"
byte-unit = "*"

[build-dependencies]
rifgen = "*"
flapigen = { git = "https://github.com/Dushistov/flapigen-rs"}